Fixes from testing
Conflicts:
	dspace-api/src/main/java/org/dspace/identifier/DataCiteIdentifierProvider.java
	dspace-api/src/test/java/org/dspace/identifier/DataCiteIdentifierProviderTest.java